--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -20,7 +20,7 @@ services:
 
   api:
     container_name: bentoweb_api
-    image: ghcr.io/bentoweb-fr/skills2025-api:${{ github.sha }}
+    image: ghcr.io/bentoweb-fr/skills2025-api:${GITHUB_SHA}
     pull_policy: always
     environment:
       PUID: 1000
