--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -27,6 +27,8 @@ services:
       PGID: 1000
       APP_ENV: prod
       DATABASE_URL: "mysql://${MYSQL_USER_PROD}:${MYSQL_PASSWORD_PROD}@mysql:3306/${MYSQL_DATABASE_PROD}?serverVersion=8.0.32&charset=utf8mb4"
+      ADMIN_EMAIL_PROD: ${ADMIN_EMAIL_PROD}
+      ADMIN_PASSWORD_HASH_PROD: ${ADMIN_PASSWORD_HASH_PROD}
     volumes:
       - api_volume:/var/www/api
     networks:
