api admin default user #3

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -12,7 +12,9 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE_PROD}
       MYSQL_USER: ${MYSQL_USER_PROD}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD_PROD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD_PROD}
+      # MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD_PROD}
+      # ADMIN_EMAIL_PROD: ${ADMIN_EMAIL_PROD}
+      # ADMIN_PASSWORD_HASH_PROD: ${ADMIN_PASSWORD_HASH_PROD}
     volumes:
       - bentoweb_db_data:/var/lib/mysql
     networks:
@@ -27,8 +29,9 @@ services:
       PGID: 1000
       APP_ENV: prod
       DATABASE_URL: "mysql://${MYSQL_USER_PROD}:${MYSQL_PASSWORD_PROD}@mysql:3306/${MYSQL_DATABASE_PROD}?serverVersion=8.0.32&charset=utf8mb4"
-      ADMIN_EMAIL_PROD: ${ADMIN_EMAIL_PROD}
-      ADMIN_PASSWORD_HASH_PROD: ${ADMIN_PASSWORD_HASH_PROD}
+      # MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD_PROD}
+      # ADMIN_EMAIL_PROD: ${ADMIN_EMAIL_PROD}
+      # ADMIN_PASSWORD_HASH_PROD: ${ADMIN_PASSWORD_HASH_PROD}
     volumes:
       - api_volume:/var/www/api
     networks:
