--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -12,9 +12,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE_PROD}
       MYSQL_USER: ${MYSQL_USER_PROD}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD_PROD}
-      # MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD_PROD}
-      # ADMIN_EMAIL_PROD: ${ADMIN_EMAIL_PROD}
-      # ADMIN_PASSWORD_HASH_PROD: ${ADMIN_PASSWORD_HASH_PROD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD_PROD}
     volumes:
       - bentoweb_db_data:/var/lib/mysql
     networks:
@@ -30,8 +28,8 @@ services:
       APP_ENV: prod
       DATABASE_URL: "mysql://${MYSQL_USER_PROD}:${MYSQL_PASSWORD_PROD}@mysql:3306/${MYSQL_DATABASE_PROD}?serverVersion=8.0.32&charset=utf8mb4"
       # MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD_PROD}
-      # ADMIN_EMAIL_PROD: ${ADMIN_EMAIL_PROD}
-      # ADMIN_PASSWORD_HASH_PROD: ${ADMIN_PASSWORD_HASH_PROD}
+      ADMIN_EMAIL_PROD: ${ADMIN_EMAIL_PROD}
+      ADMIN_PASSWORD_HASH_PROD: ${ADMIN_PASSWORD_HASH_PROD}
     volumes:
       - api_volume:/var/www/api
     networks:
@@ -79,7 +77,7 @@ networks:
 
 volumes:
   api_volume:
-    external: true
+    # external: true
   bentoweb_db_data:
     external: true
     name: bentoweb_db_data
