deploy workflow update

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,15 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
+    # Resolver pour Docker
+    resolver 127.0.0.11 valid=30s;
+
+    # Upstream pour PHP-FPM
+    upstream php_backend {
+        server api:9000 max_fails=3 fail_timeout=30s;
+        keepalive 2;
+    }
+
     # Par défaut, si aucun domaine ne correspond, on renvoie une 404
     server {
         listen 80 default_server;
@@ -40,11 +49,16 @@ http {
         ssl_certificate /etc/nginx/ssl/skills2025.local.crt;
         ssl_certificate_key /etc/nginx/ssl/skills2025.local.key;
 
-        root /var/www/front/public;
-        index index.html;
+        root /var/www/front;
+        index index.html index.htm;
 
         location / {
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /index.html =404;
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
         }
 
     }
@@ -59,16 +73,20 @@ http {
         root /var/www/api/public;
         index index.php index.html index.htm;
 
-        # location / {
-        #     try_files $uri /index.php$is_args$args;
-        # }
+        location / {
+            try_files $uri /index.php$is_args$args;
+        }
 
         location ~ ^/index\.php(/|$) {
-            fastcgi_pass api:9000;
+            try_files $uri =404;
+            fastcgi_pass php_backend;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             fastcgi_param DOCUMENT_ROOT $realpath_root;
+            fastcgi_connect_timeout 60s;
+            fastcgi_send_timeout 60s;
+            fastcgi_read_timeout 60s;
             internal;
         }
 
