--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -22,11 +22,13 @@ jobs:
       - name: Install NPM
         uses: actions/setup-node@v4
         with: 
+          node-version: '18'
           cache: "npm"
           cache-dependency-path: ./front/package-lock.json
       - name: Build Vue+Vite
         run: | 
-          npm ci --cache .npm --prefer-offline
+          # npm ci --cache .npm --prefer-offline
+          npm ci --cache .npm --prefer-offline --no-audit --no-fund
           npm run build
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
@@ -44,32 +46,47 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Entrypoint script
-        run: |
-          cp ../docker/api/entrypoint.sh entrypoint.sh
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login GHCR 
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-      - name: Générer le fichier .env pour l'API symfony en prod
+      - name: Entrypoint script
         run: |
-          echo "APP_ENV=prod" >> .env
-          echo "APP_DEBUG=false" >> .env
-          # echo "ADMIN_EMAIL_PROD=${{ secrets.ADMIN_EMAIL_PROD }}" >> .env
-          # echo "ADMIN_PASSWORD_HASH_PROD=${{ secrets.ADMIN_PASSWORD_HASH_PROD }}" >> .env
-          echo "DATABASE_URL=\"mysql://${{ secrets.MYSQL_USER_PROD }}:${{ secrets.MYSQL_PASSWORD_PROD }}@mysql:3306/${{ secrets.MYSQL_DATABASE_PROD }}?serverVersion=8.0.32&charset=utf8mb4\"" >> .env
+          cp ../docker/api/entrypoint.sh entrypoint.sh
+      # - name: Générer le fichier .env pour l'API symfony en prod
+      #   run: |
+      #     echo "APP_ENV=prod" >> .env
+      #     echo "APP_DEBUG=false" >> .env
+      #     echo "DATABASE_URL=\"mysql://${{ secrets.MYSQL_USER_PROD }}:${{ secrets.MYSQL_PASSWORD_PROD }}@mysql:3306/${{ secrets.MYSQL_DATABASE_PROD }}?serverVersion=8.0.32&charset=utf8mb4\"" >> .env
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: ./api
+      #     file: ./docker/api/Dockerfile-CI
+      #     push: true
+      #     no-cache: true
+      #     tags: |
+      #       ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_API_IMAGE }}:latest
+      #       ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_API_IMAGE }}:${{ github.sha }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: ./api
           file: ./docker/api/Dockerfile-CI
           push: true
-          no-cache: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           tags: |
             ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_API_IMAGE }}:latest
             ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_API_IMAGE }}:${{ github.sha }}
+          build-args: |
+            APP_ENV=prod
+            APP_DEBUG=false
+            DATABASE_URL=mysql://${{ secrets.MYSQL_USER_PROD }}:${{ secrets.MYSQL_PASSWORD_PROD }}@mysql:3306/${{ secrets.MYSQL_DATABASE_PROD }}?serverVersion=8.0.32&charset=utf8mb4
 
   nginx_build:
     name: Build Nginx
@@ -131,7 +148,7 @@ jobs:
           echo "MYSQL_PASSWORD_PROD=${{ secrets.MYSQL_PASSWORD_PROD }}" >> .env
           echo "MYSQL_ROOT_PASSWORD_PROD=${{ secrets.MYSQL_ROOT_PASSWORD_PROD }}" >> .env
           echo "ADMIN_EMAIL_PROD=${{ secrets.ADMIN_EMAIL_PROD }}" >> .env
-          echo "ADMIN_PASSWORD_HASH_PROD=${{ secrets.ADMIN_PASSWORD_HASH_PROD }}" >> .env
+          echo "ADMIN_PASSWORD_PROD=${{ secrets.ADMIN_PASSWORD_PROD }}" >> .env
           scp .env ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:/home/${{ secrets.PROD_SSH_USER }}/www/skills2025/.env
       - name: Set GITHUB_SHA environment variable
         run: |
