--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,20 @@
 services:
+
+  mysql:
+    image: mysql:8.0
+    container_name: skills2025_mysql
+    environment:
+      PUID: 1000
+      PGID: 1000
+      MYSQL_ROOT_PASSWORD: root
+      # MYSQL_DATABASE: skills2025
+      # MYSQL_USER: skills
+      # MYSQL_PASSWORD: password
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - skills2025_network
   api:
     container_name: skills2025_api
     environment:
@@ -52,22 +68,6 @@ services:
       - api
       - front
 
-  mysql:
-    image: mysql:8.0
-    container_name: skills2025_mysql
-    environment:
-      PUID: 1000
-      PGID: 1000
-      MYSQL_ROOT_PASSWORD: root
-      # MYSQL_DATABASE: skills2025
-      # MYSQL_USER: skills
-      # MYSQL_PASSWORD: password
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - skills2025_network
-
   phpmyadmin:
     image: phpmyadmin:5.2.1
     container_name: skills2025_phpmyadmin
@@ -88,6 +88,7 @@ networks:
     driver: bridge
 
 volumes:
+  api_volume:
   mysql_data:
     external: true
     name: skills2025_mysql_data
