--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -86,6 +86,20 @@ http {
         root /var/www/api/public;
         index index.php index.html index.htm;
 
+        # Servir les assets statiques (CSS, JS, images, etc.)
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            try_files $uri =404;
+        }
+
+        # Servir spécifiquement les bundles (EasyAdmin, etc.)
+        location /bundles/ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            try_files $uri =404;
+        }
+
         location / {
             try_files $uri /index.php$is_args$args;
         }
