--- a/docker/api/Dockerfile-CI
+++ b/docker/api/Dockerfile-CI
@@ -34,8 +34,11 @@ COPY . .
 ENV APP_ENV=prod
 ENV APP_DEBUG=0
 
+# Définir une DATABASE_URL temporaire pour le build (Symfony en a besoin même pour cache:clear)
+# ENV DATABASE_URL="mysql://dummy:dummy@localhost:3306/dummy"
+
 # Installer les assets et nettoyer le cache (maintenant que APP_ENV=prod)
-RUN composer run-script auto-scripts
+RUN php bin/console assets:install public --env=prod
 
 # Debug: Vérifier la configuration des bundles ET s'assurer que prod=false est présent
 RUN echo "=== BUNDLES CONFIGURATION ===" && cat config/bundles.php && \
