--- a/api/config/packages/nelmio_cors.yaml
+++ b/api/config/packages/nelmio_cors.yaml
@@ -13,7 +13,7 @@ nelmio_cors:
   paths:
     "^/": null
     '^/api/':
-      allow_origin: ['https://localhost:5173']
+      allow_origin: ['https://localhost:5173','https://bentoweb.fr/']
       allow_credentials: true
       allow_headers: ['Content-Type', 'Authorization']
       allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'DELETE']
