--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -105,6 +105,15 @@ http {
         }
 
         location ~ ^/index\.php(/|$) {
+            add_header 'Access-Control-Allow-Origin' 'https://bentoweb.fr';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'https://bentoweb.fr';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+                return 204;
+            }
             try_files $uri =404;
             fastcgi_pass php_backend;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -115,6 +124,7 @@ http {
             fastcgi_send_timeout 60s;
             fastcgi_read_timeout 60s;
             internal;
+            
         }
 
         location ~ \.php$ {
