--- a/api/config/packages/nelmio_cors.yaml
+++ b/api/config/packages/nelmio_cors.yaml
@@ -2,7 +2,7 @@ nelmio_cors:
   defaults:
     origin_regex: true
     # allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"]
-    allow_origin: ["https://localhost:5173"]
+    allow_origin: ["https://localhost:5173",'https://bentoweb.fr']
     # allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
     allow_methods: ["GET", "POST"]
     allow_credentials: true
