--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -101,19 +101,18 @@ http {
         }
 
         location / {
+            add_header 'Access-Control-Allow-Origin' 'https://bentoweb.fr' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+
             try_files $uri /index.php$is_args$args;
         }
 
         location ~ ^/index\.php(/|$) {
-            add_header 'Access-Control-Allow-Origin' 'https://bentoweb.fr';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' 'https://bentoweb.fr';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-                return 204;
-            }
             try_files $uri =404;
             fastcgi_pass php_backend;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -124,7 +123,6 @@ http {
             fastcgi_send_timeout 60s;
             fastcgi_read_timeout 60s;
             internal;
-            
         }
 
         location ~ \.php$ {
