--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -19,7 +19,7 @@ http {
 
     # Upstream pour PHP-FPM
     upstream php_backend {
-        server api:9000 max_fails=3 fail_timeout=30s;
+        server api:9000 max_fails=2 fail_timeout=10s;
         keepalive 2;
     }
 
@@ -59,6 +59,21 @@ http {
         index index.html index.htm;
 
         location / {
+            # if ($http_user_agent ~* "(googlebot|bingbot|yandex|baiduspider|duckduckbot|slurp|msnbot)") {
+            #     root /var/www/api/public;
+            #     index index.php;
+            #     try_files $uri /index.php$is_args$args;
+            #     try_files $uri =404;
+            #     fastcgi_pass php_backend;
+            #     fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            #     include fastcgi_params;
+            #     fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            #     fastcgi_param DOCUMENT_ROOT $realpath_root;
+            #     fastcgi_connect_timeout 60s;
+            #     fastcgi_send_timeout 60s;
+            #     fastcgi_read_timeout 60s;
+            #     internal;
+            # }
             try_files $uri $uri/ /index.html =404;
             # try_files $uri /index.html$is_args$args;
         }
@@ -101,6 +116,7 @@ http {
         }
 
         location / {
+
             add_header 'Access-Control-Allow-Origin' 'https://bentoweb.fr' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
             add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
@@ -108,6 +124,10 @@ http {
             if ($request_method = 'OPTIONS') {
                 return 204;
             }
+
+            # if ($http_user_agent ~* "(googlebot|bingbot|yandex|baiduspider|duckduckbot|slurp|msnbot)") {
+            #     return 302 /seo;
+            # }
 
             try_files $uri /index.php$is_args$args;
         }
