--- a/api/config/packages/nelmio_cors.yaml
+++ b/api/config/packages/nelmio_cors.yaml
@@ -2,7 +2,7 @@ nelmio_cors:
   defaults:
     origin_regex: true
     # allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"]
-    allow_origin: ["https://localhost:5173",'https://bentoweb.fr']
+    allow_origin: ["https://localhost:5173", 'https://skills2025.local', 'https://bentoweb.fr']
     # allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
     allow_methods: ["GET", "POST"]
     allow_credentials: true
@@ -10,11 +10,11 @@ nelmio_cors:
     allow_headers: ["Content-Type", 'Authorization']
     # expose_headers: ["Link"]
     max_age: 3600
-  paths:
-    "^/": null
-    '^/api/':
-      allow_origin: ['https://localhost:5173','https://bentoweb.fr']
-      allow_credentials: true
-      allow_headers: ['Content-Type', 'Authorization']
-      allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'DELETE']
-      max_age: 3600
+  # paths:
+    # "^/": null
+    # '^/api/':
+    #   allow_origin: ['https://localhost:5173', 'https://skills2025.local', 'https://bentoweb.fr']
+    #   allow_credentials: true
+    #   allow_headers: ['Content-Type', 'Authorization']
+    #   allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'DELETE']
+    #   max_age: 3600
