--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
 
     # Upstream pour PHP-FPM
     upstream php_backend {
-        server api:9000 max_fails=3 fail_timeout=30s;
+        server api:9000 max_fails=2 fail_timeout=10s;
         keepalive 2;
     }
 
@@ -73,7 +73,17 @@ http {
         root /var/www/api/public;
         index index.php index.html index.htm;
 
+        location ~ ^/api/ {
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+            try_files $uri /index.php$is_args$args;
+        }
+
         location / {
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
             try_files $uri /index.php$is_args$args;
         }
 
