--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -23,6 +23,7 @@ security:
         login_path: admin_login
         check_path: admin_login
         enable_csrf: true
+        default_target_path: /admin
 
       logout:
         path: logout
