--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -115,6 +115,15 @@ http {
             try_files $uri =404;
         }
 
+        # Accès à phpMyAdmin
+        location /phpmyadmin/ {
+            proxy_pass http://bentoweb_phpmyadmin:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location / {
 
             add_header 'Access-Control-Allow-Origin' 'https://bentoweb.fr' always;
