--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -122,6 +122,17 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            
+            # Réécriture des redirections pour phpMyAdmin
+            proxy_redirect ~^/(.*)$ /phpmyadmin/$1;
+            
+            # Gestion des assets
+            sub_filter_once off;
+            sub_filter 'src="/' 'src="/phpmyadmin/';
+            sub_filter 'href="/' 'href="/phpmyadmin/';
+            sub_filter 'action="/' 'action="/phpmyadmin/';
         }
 
         location / {
