--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -115,6 +115,15 @@ http {
             try_files $uri =404;
         }
 
+        # Assets statiques pour phpMyAdmin
+        location ~ ^/phpmyadmin/(themes|js|vendor|css)/ {
+            proxy_pass http://bentoweb_phpmyadmin:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Accès à phpMyAdmin
         location /phpmyadmin/ {
             proxy_pass http://bentoweb_phpmyadmin:80/;
@@ -127,12 +136,6 @@ http {
             
             # Réécriture des redirections pour phpMyAdmin
             proxy_redirect ~^/(.*)$ /phpmyadmin/$1;
-            
-            # Gestion des assets
-            sub_filter_once off;
-            sub_filter 'src="/' 'src="/phpmyadmin/';
-            sub_filter 'href="/' 'href="/phpmyadmin/';
-            sub_filter 'action="/' 'action="/phpmyadmin/';
         }
 
         location / {
