--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -19,7 +19,7 @@ http {
 
     # Upstream pour PHP-FPM
     upstream php_backend {
-        server api:9000 max_fails=2 fail_timeout=10s;
+        server bentoweb_api:9000 max_fails=2 fail_timeout=10s;
         keepalive 2;
     }
 
@@ -101,13 +101,6 @@ http {
         root /var/www/api/public;
         index index.php index.html index.htm;
 
-        # Servir les assets statiques (CSS, JS, images, etc.)
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            try_files $uri =404;
-        }
-
         # Servir spécifiquement les bundles (EasyAdmin, etc.)
         location /bundles/ {
             expires 1y;
@@ -115,13 +108,29 @@ http {
             try_files $uri =404;
         }
 
-        # Assets statiques pour phpMyAdmin
-        location ~ ^/phpmyadmin/(themes|js|vendor|css)/ {
+        # Assets statiques pour phpMyAdmin (tous les fichiers statiques)
+        location ~ ^/phpmyadmin/(themes|js|vendor|css|img)/ {
             proxy_pass http://bentoweb_phpmyadmin:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        # Assets avec extensions pour phpMyAdmin
+        location ~ ^/phpmyadmin/.*\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            proxy_pass http://bentoweb_phpmyadmin:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Servir les assets statiques (CSS, JS, images, etc.) - APRÈS phpMyAdmin
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            try_files $uri =404;
         }
 
         # Accès à phpMyAdmin
