--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -73,7 +73,7 @@ services:
       - bentoweb_network
     volumes:
       # - ./docker/phpmyadmin/apache.conf:/etc/apache2/conf-available/servername.conf
-      - ./docker/phpmyadmin/entrypoint.sh:/entrypoint.sh
+      - ./phpmyadmin/entrypoint.sh:/entrypoint.sh
     entrypoint: ["/bin/bash", "/entrypoint.sh"]
 
 networks:
