--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -145,6 +145,9 @@ http {
             
             # Réécriture des redirections pour phpMyAdmin
             proxy_redirect ~^/(.*)$ /phpmyadmin/$1;
+
+            access_log /var/log/nginx/phpmyadmin_access.log;
+            error_log /var/log/nginx/phpmyadmin_error.log;
         }
 
         location / {
