--- a/docker/phpmyadmin/apache.conf
+++ b/docker/phpmyadmin/apache.conf
@@ -1,1 +1,11 @@
 ServerName api.bentoweb.fr
+
+# Configuration pour phpMyAdmin sous un sous-chemin
+<VirtualHost *:80>
+    ServerName api.bentoweb.fr
+    DocumentRoot /var/www/html
+    
+    # Utiliser les en-têtes de proxy pour le chemin de base
+    SetEnvIf X-Forwarded-Proto "https" HTTPS=on
+    SetEnvIf X-Forwarded-Host "^(.*)$" HTTP_HOST=$1
+</VirtualHost>
