--- a/docker/phpmyadmin/apache.conf
+++ b/docker/phpmyadmin/apache.conf
@@ -5,7 +5,18 @@ ServerName api.bentoweb.fr
     ServerName api.bentoweb.fr
     DocumentRoot /var/www/html
     
+    # Alias pour servir phpMyAdmin depuis le sous-chemin
+    Alias /phpmyadmin /var/www/html
+    
     # Utiliser les en-têtes de proxy pour le chemin de base
     SetEnvIf X-Forwarded-Proto "https" HTTPS=on
     SetEnvIf X-Forwarded-Host "^(.*)$" HTTP_HOST=$1
+    
+    # Configuration pour le répertoire phpMyAdmin
+    <Directory "/var/www/html">
+        Options FollowSymLinks
+        DirectoryIndex index.php
+        AllowOverride All
+        Require all granted
+    </Directory>
 </VirtualHost>
