--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -110,7 +110,7 @@ http {
 
         # Assets statiques pour phpMyAdmin (tous les fichiers statiques)
         location ~ ^/phpmyadmin/(themes|js|vendor|css|img)/ {
-            proxy_pass http://bentoweb_phpmyadmin:80;
+            proxy_pass http://bentoweb_phpmyadmin:80$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -119,7 +119,7 @@ http {
         
         # Assets avec extensions pour phpMyAdmin
         location ~ ^/phpmyadmin/.*\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            proxy_pass http://bentoweb_phpmyadmin:80;
+            proxy_pass http://bentoweb_phpmyadmin:80$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
