--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -109,17 +109,8 @@ http {
         }
 
         # Assets statiques pour phpMyAdmin (tous les fichiers statiques)
-        location ~ ^/phpmyadmin/(themes|js|vendor|css|img)/ {
-            proxy_pass http://bentoweb_phpmyadmin:80$request_uri;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Assets avec extensions pour phpMyAdmin
-        location ~ ^/phpmyadmin/.*\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            proxy_pass http://bentoweb_phpmyadmin:80$request_uri;
+        location ~ ^/phpmyadmin/(.*) {
+            proxy_pass http://bentoweb_phpmyadmin:80/$1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -131,23 +122,6 @@ http {
             expires 1y;
             add_header Cache-Control "public, immutable";
             try_files $uri =404;
-        }
-
-        # Accès à phpMyAdmin
-        location /phpmyadmin/ {
-            proxy_pass http://bentoweb_phpmyadmin:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-            
-            # Réécriture des redirections pour phpMyAdmin
-            proxy_redirect ~^/(.*)$ /phpmyadmin/$1;
-
-            access_log /var/log/nginx/phpmyadmin_access.log;
-            error_log /var/log/nginx/phpmyadmin_error.log;
         }
 
         location / {
