--- a/docker/phpmyadmin/apache.conf
+++ b/docker/phpmyadmin/apache.conf
@@ -1,18 +1,15 @@
 ServerName api.bentoweb.fr
 
-# Configuration pour phpMyAdmin sous un sous-chemin
+# Configuration simple pour phpMyAdmin
 <VirtualHost *:80>
     ServerName api.bentoweb.fr
     DocumentRoot /var/www/html
     
-    # Alias pour servir phpMyAdmin depuis le sous-chemin
-    Alias /phpmyadmin /var/www/html
-    
-    # Utiliser les en-têtes de proxy pour le chemin de base
+    # Utiliser les en-têtes de proxy
     SetEnvIf X-Forwarded-Proto "https" HTTPS=on
     SetEnvIf X-Forwarded-Host "^(.*)$" HTTP_HOST=$1
     
-    # Configuration pour le répertoire phpMyAdmin
+    # Configuration pour le répertoire racine
     <Directory "/var/www/html">
         Options FollowSymLinks
         DirectoryIndex index.php
