--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -115,6 +115,21 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            
+            # En-têtes supplémentaires pour les requêtes AJAX
+            proxy_set_header X-Forwarded-Prefix /phpmyadmin;
+            proxy_set_header Accept-Encoding "";
+            
+            # Gestion des redirections
+            proxy_redirect ~^/(.*)$ /phpmyadmin/$1;
+            proxy_redirect / /phpmyadmin/;
+            
+            # Timeouts pour éviter les déconnexions
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
 
         # Servir les assets statiques (CSS, JS, images, etc.) - APRÈS phpMyAdmin
