--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -108,6 +108,10 @@ http {
             try_files $uri =404;
         }
 
+        location = /phpmyadmin {
+            return 301 /phpmyadmin/;
+        }
+
         # Assets statiques pour phpMyAdmin (tous les fichiers statiques)
         location ~ ^/phpmyadmin/(.*) {
             proxy_pass http://bentoweb_phpmyadmin:80/$1;
@@ -116,7 +120,9 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_set_header X-Forwarded-Port 
+            proxy_cookie_path / /phpmyadmin/;
+            $server_port;
             
             # En-têtes supplémentaires pour les requêtes AJAX
             proxy_set_header X-Forwarded-Prefix /phpmyadmin;
