--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -120,9 +120,8 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port 
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_cookie_path / /phpmyadmin/;
-            $server_port;
             
             # En-têtes supplémentaires pour les requêtes AJAX
             proxy_set_header X-Forwarded-Prefix /phpmyadmin;
