--- a/docker/phpmyadmin/apache.conf
+++ b/docker/phpmyadmin/apache.conf
@@ -5,9 +5,13 @@ ServerName api.bentoweb.fr
     ServerName api.bentoweb.fr
     DocumentRoot /var/www/html
     
-    # Utiliser les en-têtes de proxy
+    # Utiliser les en-têtes de proxy pour HTTPS
     SetEnvIf X-Forwarded-Proto "https" HTTPS=on
+    SetEnvIf X-Forwarded-Proto "https" SERVER_PORT=443
     SetEnvIf X-Forwarded-Host "^(.*)$" HTTP_HOST=$1
+    
+    # Forcer HTTPS pour phpMyAdmin
+    SetEnv HTTPS on
     
     # Configuration pour le répertoire racine
     <Directory "/var/www/html">
