--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -118,14 +118,15 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto https;
             proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_set_header X-Forwarded-Port 443;
             proxy_cookie_path / /phpmyadmin/;
             
-            # En-têtes supplémentaires pour les requêtes AJAX
+            # En-têtes supplémentaires pour les requêtes AJAX et HTTPS
             proxy_set_header X-Forwarded-Prefix /phpmyadmin;
             proxy_set_header Accept-Encoding "";
+            proxy_set_header X-Forwarded-SSL on;
             
             # Gestion des redirections
             proxy_redirect ~^/(.*)$ /phpmyadmin/$1;
