--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -112,7 +112,32 @@ http {
             return 301 /phpmyadmin/;
         }
 
-        # Assets statiques pour phpMyAdmin (tous les fichiers statiques)
+        # Configuration spécifique pour les requêtes AJAX de phpMyAdmin
+        location ~ ^/phpmyadmin/(.*\.php)$ {
+            proxy_pass http://bentoweb_phpmyadmin:80/$1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port 443;
+            proxy_set_header X-Forwarded-Prefix /phpmyadmin;
+            proxy_set_header X-Forwarded-SSL on;
+            
+            # En-têtes spécifiques pour les requêtes AJAX
+            proxy_set_header X-Requested-With $http_x_requested_with;
+            proxy_set_header Content-Type $content_type;
+            
+            # Pas de redirection pour les fichiers PHP
+            proxy_redirect off;
+            
+            # Timeouts pour éviter les déconnexions
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+
+        # Assets statiques pour phpMyAdmin (tous les autres fichiers)
         location ~ ^/phpmyadmin/(.*) {
             proxy_pass http://bentoweb_phpmyadmin:80/$1;
             proxy_set_header Host $host;
@@ -123,7 +148,7 @@ http {
             proxy_set_header X-Forwarded-Port 443;
             proxy_cookie_path / /phpmyadmin/;
             
-            # En-têtes supplémentaires pour les requêtes AJAX et HTTPS
+            # En-têtes supplémentaires pour HTTPS
             proxy_set_header X-Forwarded-Prefix /phpmyadmin;
             proxy_set_header Accept-Encoding "";
             proxy_set_header X-Forwarded-SSL on;
